--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">My Store</a>
+      <a <%= link_to "Tree Story", root_url, class: "navbar-brand" %> </a>
     </div>
 
     <div class="collapse navbar-collapse js-navbar-collapse">
@@ -158,13 +158,16 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">My account <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= t('nav1.miCuenta') %> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <% if user_signed_in? %>
+                <li><%= link_to(current_user.name, user_path(current_user)) %></li>
+                <li><%= link_to('Sign out', destroy_user_session_path, method: :delete) %></li>
+            <% else %>
+                <li><%= link_to 'About', about_path %></li>
+                <li><%= link_to 'Sign up', new_user_registration_path %></li>
+                <li><%= link_to 'Sign in', user_session_path %></li>
+            <% end %>
           </ul>
         </li>
         <li><a href="#">My cart (0) items</a></li>
