--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -27,6 +27,18 @@ h1, h2, h3, h4, h5, h6 {
   };
 }
 
+
+
+
+.linksSanos {
+  font-family: 'Montserrat';
+  font-size: $small-font-size;
+  color: white !important;
+  &:hover {
+    color: $bg-color !important;
+  };
+}
+
 .avatar {
   border: 1px solid $border-color;
   width: 50px;
@@ -151,6 +163,7 @@ p {
   line-height: 3rem;
 }
 .mega-dropdown {
+
   position: static !important;
 }
 .mega-dropdown-menu {
@@ -158,12 +171,14 @@ p {
   width: 100%;
   box-shadow: none;
   -webkit-box-shadow: none;
+
 }
 .mega-dropdown-menu > li > ul {
   padding: 0;
   margin: 0;
 }
 .mega-dropdown-menu > li > ul > li {
+
   list-style: none;
 }
 .mega-dropdown-menu > li > ul > li > a {
@@ -173,6 +188,7 @@ p {
 }
 .mega-dropdown-menu > li ul > li > a:hover,
 .mega-dropdown-menu > li ul > li > a:focus {
+
   text-decoration: none;
 }
 .mega-dropdown-menu .dropdown-header {
