--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -171,6 +171,7 @@
           </ul>
         </li>
         <li><a href="#"><span class="linksSanos"><%= t('nav1.MyCart') %></span></a></li>
+        <li><a href="#"><span class="linksSanos"><%= t('nav1.MyCart') %></span></a></li>
       </ul>
     </div><!-- /.nav-collapse -->
   </nav>
