cambios en la cabecera iniciales

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,11 +13,11 @@
     <div class="collapse navbar-collapse js-navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="dropdown mega-dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Men <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="linksSanos"><%= t('navPrincipal.nav6.descubrir') %> <span class="caret"></span></span></a>
           <ul class="dropdown-menu mega-dropdown-menu">
             <li class="col-sm-3">
               <ul>
-                <li class="dropdown-header">Men Collection</li>
+                <li class="dropdown-header">Historias de ejemplo</li>
                 <div id="menCollection" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="item active">
@@ -25,17 +25,20 @@
                       <h4><small>Summer dress floral prints</small></h4>
                       <button class="btn btn-primary" type="button">49,99 €</button> <button href="#" class="btn btn-default" type="button"><span class="glyphicon glyphicon-heart"></span> Add to Wishlist</button>
                     </div><!-- End Item -->
+
                     <div class="item">
                       <a href="#"><img src="http://placehold.it/254x150/3498db/f5f5f5/&text=New+Collection" class="img-responsive" alt="product 2"></a>
                       <h4><small>Gold sandals with shiny touch</small></h4>
                       <button class="btn btn-primary" type="button">9,99 €</button> <button href="#" class="btn btn-default" type="button"><span class="glyphicon glyphicon-heart"></span> Add to Wishlist</button>
                     </div><!-- End Item -->
+
                     <div class="item">
                       <a href="#"><img src="http://placehold.it/254x150/2ecc71/f5f5f5/&text=New+Collection" class="img-responsive" alt="product 3"></a>
                       <h4><small>Denin jacket stamped</small></h4>
                       <button class="btn btn-primary" type="button">49,99 €</button> <button href="#" class="btn btn-default" type="button"><span class="glyphicon glyphicon-heart"></span> Add to Wishlist</button>
                     </div><!-- End Item -->
                   </div><!-- End Carousel Inner -->
+
                   <!-- Controls -->
                   <a class="left carousel-control" href="#menCollection" role="button" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -46,45 +49,16 @@
                     <span class="sr-only">Next</span>
                   </a>
                 </div><!-- /.carousel -->
+
                 <li class="divider"></li>
                 <li><a href="#">View all Collection <span class="glyphicon glyphicon-chevron-right pull-right"></span></a></li>
               </ul>
             </li>
-            <li class="col-sm-3">
-              <ul>
-                <li class="dropdown-header">Features</li>
-                <li><a href="#">Auto Carousel</a></li>
-                <li><a href="#">Carousel Control</a></li>
-                <li><a href="#">Left & Right Navigation</a></li>
-                <li><a href="#">Four Columns Grid</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Fonts</li>
-                <li><a href="#">Glyphicon</a></li>
-                <li><a href="#">Google Fonts</a></li>
-              </ul>
-            </li>
-            <li class="col-sm-3">
-              <ul>
-                <li class="dropdown-header">Plus</li>
-                <li><a href="#">Navbar Inverse</a></li>
-                <li><a href="#">Pull Right Elements</a></li>
-                <li><a href="#">Coloured Headers</a></li>
-                <li><a href="#">Primary Buttons & Default</a></li>
-              </ul>
-            </li>
-            <li class="col-sm-3">
-              <ul>
-                <li class="dropdown-header">Much more</li>
-                <li><a href="#">Easy to Customize</a></li>
-                <li><a href="#">Calls to action</a></li>
-                <li><a href="#">Custom Fonts</a></li>
-                <li><a href="#">Slide down on Hover</a></li>
-              </ul>
-            </li>
+
           </ul>
         </li>
         <li class="dropdown mega-dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Women <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="linksSanos"><%= t('navPrincipal.nav4.generos') %><span class="caret"></span></span></a>
           <ul class="dropdown-menu mega-dropdown-menu">
             <li class="col-sm-3">
               <ul>
@@ -127,17 +101,20 @@
                       <h4><small>Summer dress floral prints</small></h4>
                       <button class="btn btn-primary" type="button">49,99 €</button> <button href="#" class="btn btn-default" type="button"><span class="glyphicon glyphicon-heart"></span> Add to Wishlist</button>
                     </div><!-- End Item -->
+
                     <div class="item">
                       <a href="#"><img src="http://placehold.it/254x150/ff3546/f5f5f5/&text=New+Collection" class="img-responsive" alt="product 2"></a>
                       <h4><small>Gold sandals with shiny touch</small></h4>
                       <button class="btn btn-primary" type="button">9,99 €</button> <button href="#" class="btn btn-default" type="button"><span class="glyphicon glyphicon-heart"></span> Add to Wishlist</button>
                     </div><!-- End Item -->
+
                     <div class="item">
                       <a href="#"><img src="http://placehold.it/254x150/2ecc71/f5f5f5/&text=New+Collection" class="img-responsive" alt="product 3"></a>
                       <h4><small>Denin jacket stamped</small></h4>
                       <button class="btn btn-primary" type="button">49,99 €</button> <button href="#" class="btn btn-default" type="button"><span class="glyphicon glyphicon-heart"></span> Add to Wishlist</button>
                     </div><!-- End Item -->
                   </div><!-- End Carousel Inner -->
+
                   <!-- Controls -->
                   <a class="left carousel-control" href="#womenCollection" role="button" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -148,13 +125,15 @@
                     <span class="sr-only">Next</span>
                   </a>
                 </div><!-- /.carousel -->
+
+
                 <li class="divider"></li>
                 <li><a href="#">View all Collection <span class="glyphicon glyphicon-chevron-right pull-right"></span></a></li>
               </ul>
             </li>
           </ul>
         </li>
-        <li><a href="#">Store locator</a></li>
+        <li><a href="#"><span class="linksSanos"><%= t('navPrincipal.nav3.suscripcionPremium') %></span></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
@@ -162,16 +141,15 @@
           <ul class="dropdown-menu" role="menu">
             <% if user_signed_in? %>
                 <li><%= link_to(current_user.name, user_path(current_user)) %></li>
-                <li><%= link_to(t('nav2.SignOUt'), destroy_user_session_path, method: :delete) %></li>
+                <li><%= link_to(t('navPrincipal.nav2.SignOUt'), destroy_user_session_path, method: :delete) %></li>
             <% else %>
-                <li><%= link_to t('nav2.about'), about_path %></li>
-                <li><%= link_to t('nav2.SignUp'), new_user_registration_path %></li>
-                <li><%= link_to t('nav2.SignIn'), user_session_path %></li>
+                <li><%= link_to t('navPrincipal.nav2.about'), about_path %></li>
+                <li><%= link_to t('navPrincipal.nav2.SignUp'), new_user_registration_path %></li>
+                <li><%= link_to t('navPrincipal.nav2.SignIn'), user_session_path %></li>
             <% end %>
           </ul>
         </li>
-        <li><a href="#"><span class="linksSanos"><%= t('nav1.MyCart') %></span></a></li>
-        <li><a href="#"><span class="linksSanos"><%= t('nav1.MyCart') %></span></a></li>
+        <li><a href="#"><span class="linksSanos"><%= t('navPrincipal.nav1.MyCart') %></span></a></li>
       </ul>
     </div><!-- /.nav-collapse -->
   </nav>
